--- a/Final Output/README
+++ b/Final Output/README
@@ -1,4 +1,4 @@
-
+TicTacToeTheInternational (Nelson Klyde B. Antonio)
 
 # Customization for the image file paths
 	You may need to update the paths to images (RC.png, DC.jpg, NICE.png, INTRO.png, MAP.webp, ENDS.png) based on where they are stored on your system.
@@ -6,4 +6,4 @@
 
 You may need to update the paths to images (RC.png, DC.jpg, NICE.png, INTRO.png, MAP.webp, ENDS.png) based on where they are stored on your system.
 
-UI Theme: The game's visual elements (colors, fonts, images) are customizable in the code. Feel free to modify these to suit your preferred theme.
+UI Theme: The game's visual elements (colors, fonts, images) are customizable in the code.
